# Claude-Code-prompt-refiner

./: .gitignore  README.md  README_zh.md  install.sh  pr.bat  prompt-config.example.json  prompt-config.json  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json.example
.claude-plugin/: marketplace.json  plugin.json
docs/: architecture.md  configuration.md  hooks.md  maintainer-notes.md  testing.md  troubleshooting.md  workflow.md
examples/: hook-payload.json  refine-demo.py
hooks/: hooks.json
prompt_refiner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: ensure-deps.cmd  ensure-deps.sh  run-hook.cmd  run-hook.sh
skills/refine/: SKILL.md
src/: __init__.py  app.py  cache.py  config.py  credentials.py  executor.py  hook_entry.py  hook_integration.py  hook_terminal.py  llm.py  logger.py  models.py  refiner.py  setup_wizard.py  summarizer.py  transcript_reader.py  ui.py
src/providers/: __init__.py  adapters.py  builtin.py  models.py  registry.py
tests/: test_adapters.py  test_cache.py  test_config.py  test_credentials.py  test_credentials_unified.py  test_hook_e2e.py  test_hook_entry.py  test_hook_integration.py  test_hook_terminal.py  test_llm.py  test_logger.py  test_models.py  test_providers.py  test_refiner.py  test_setup_wizard.py  test_summarizer.py  test_transcript_path.py  test_transcript_reader.py
